syntax = "proto3";

option csharp_namespace = "TestProject.Grpc.Contracts";

package TestProject;

import "google/protobuf/Timestamp.proto";

service EchoService {
	rpc EchoAsync (EchoMessage) returns (EchoMessage);
}

message EchoMessage {
	google.protobuf.Timestamp time = 1;
}